--- a/asset/CSS/service.css
+++ b/asset/CSS/service.css
@@ -4,3 +4,70 @@
     margin-right: 71px; 
     margin-bottom: 50px;
 }
+.service .heading {
+    text-align: center;
+    font-size: 64px;
+    font-weight: 500;
+}
+.service .heading .textColor {
+    color: var(--color-primary);
+}
+
+
+
+
+
+
+
+
+
+
+
+.service .inner-wrap {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 0;
+}
+
+.service .inner-box {
+    width: calc(100%/3 - 20px);
+    height: 100%;
+    /* aspect-radio: tỷ lệ width/height của element */
+    aspect-ratio: 4/3;
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.service .inner-box img {
+    width: 100%;
+    height: 100%;
+    /* object-fit: ảnh tự co dãn hết width/height mà ko bị vỡ */
+    object-fit: cover;
+    transition: all 0.6s;
+}
+
+.service .inner-box:hover img {
+    transform: scale(1.1);
+}
+
+.service .inner-box .inner-content {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+}
+
+
+
+.service .inner-box .inner-title {
+    font-size: 32px;
+    font-weight: 500;
+    color: white;
+    text-align: center;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
+}
