--- a/asset/CSS/style.css
+++ b/asset/CSS/style.css
@@ -190,7 +190,7 @@
     cursor: not-allowed;
     border-radius: 50%;
     border: 2px solid #444;
-    box-shadow: -10px -10px 10px #00AA5B, 0px -10px 10px 0px #00AA5B, 10px -10px 10px #00AA5B, 10px 0 10px #00AA5B, 10px 10px 10px 0px#00AA5B, 0 10px 10px 0px #00AA5B, -10px 10px 10px 0px #00AA5B;
+    box-shadow: -10px -10px 10px #00AA5B, 0px -10px 10px 0px #00AA5B, 10px -10px 10px #00AA5B, 10px 0 10px #00AA5B, 10px 10px 10px 0px #00AA5B, 0 10px 10px 0px #00AA5B, -10px 10px 10px 0px #00AA5B;
     animation: rot55 0.7s linear infinite;
     position: absolute; top: 35px; left: 98px; z-index: -990;
 }
@@ -377,7 +377,7 @@
 .star li:after {
     content: '';
     position: absolute;
-    background-color: #045730;
+    background-color: var(--color-primary);
 }
 
 .star li:before {
@@ -453,6 +453,7 @@
     left: 2px;
 }
 
+/* Khói */
 @keyframes fumes {
     50% {
         transform: scale(1.5);
@@ -469,6 +470,7 @@
     }
 }
 
+/* Tên lửa */
 @keyframes bounce {
     0% {
         transform: translate3d(0px, 0px, 0);
@@ -483,6 +485,7 @@
     }
 }
 
+/* Khí thải */
 @keyframes exhaust {
     0% {
         background: linear-gradient(to bottom, transparent 10%, #f5f5f5 100%);
@@ -503,6 +506,7 @@
     }
 }
 
+/* Sao */
 @keyframes twinkle {
     80% {
         transform: scale(1.1);
@@ -723,49 +727,6 @@
 .experience .lineTwo {
     height: 135px;
 }
-.experience .dashCircle {
-    width: 48px;
-    height: 48px;
-    border-radius: 50px;
-    border: 2px dashed var(--color-body);
-    position: absolute;
-    top: -5.75px;
-    left: -6.75px;
-}
-.loader {
-    position: relative;
-}
-.loader span {
-    position: absolute;
-    color: #fff;
-    transform: translate(-50%, -50%);
-    font-size: 64px;
-    letter-spacing: 5px;
-    top: -48px;
-    right: 190px;
-}
-.loader span:nth-child(1) {
-    color: transparent;
-    -webkit-text-stroke: 0.3px var(--color-primary);
-}
-.loader span:nth-child(2) {
-    color: var(--color-primary);
-    -webkit-text-stroke: 1px var(--color-primary);
-    animation: uiverse723 3s ease-in-out infinite;
-}
-@keyframes uiverse723 {
-
-    0%,
-    100% {
-        clip-path: polygon(0% 45%, 15% 44%, 32% 50%,
-                54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
-    }
-
-    50% {
-        clip-path: polygon(0% 60%, 16% 65%, 34% 66%,
-                51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
-    }
-}
 .se-loader {
     width: 30px;
     height: 30px;
@@ -921,13 +882,13 @@
     text-shadow: white 1px 0 10px;
 }
 .portfolio .textOne {
-    color: #FF8A00;
+    color: #3854BA;
 }
 .portfolio .textTwo {
     color: #F286A5;
 }
 .portfolio .card:hover .textOne {
-    text-shadow: #FF8A00 1px 0 10px;
+    text-shadow: #3854BA 1px 0 10px;
 
 }
 .portfolio .card:hover .textTwo {
@@ -967,16 +928,16 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .portfolio .btnOne {
-    border: 2px solid #FF8A00;
-    color: #FF8A00;
+    border: 2px solid white;
+    color: white;
 }
 .portfolio .card:hover .btnOne {
-    border: 2px solid #FF8A00;
-    background-color: #FF8A00;
+    border: 2px solid #3854BA;
+    background-color: #3854BA;
 }
 .portfolio .btnTwo {
-    border: 2px solid #F286A5;
-    color: #F286A5;
+    border: 2px solid white;
+    color: white;
 }
 .portfolio .card:hover .btnTwo {
     border: 2px solid #F286A5;
