--- a/asset/CSS/about.css
+++ b/asset/CSS/about.css
@@ -1,6 +1,175 @@
-.about {
-    margin-top: 126px; 
-    margin-left: 71px; 
-    margin-right: 71px; 
+.about .icon {
+    color: var(--color-primary);
+    margin-right: 10px;
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 20px;
+}
+.about .boxOne {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-primary);
+}
+.about .innerImg {
+    background-color: white;
+    padding-left: 150px;
+    padding-top: 57px;
+    display: flex;
+}
+.about img {
+    width: 400px;
+    height: auto;
+}
+.about .innerTitle {
+    background-color: white;
+    height: 100%;
+}
+.about .innerName {
+    font-size: 50px;
+    font-weight: 900;
+    line-height: 40px;
+    padding-top: 200px;
+}
+.about .innerJob {
+    font-size: 20px;
+    color: gray;
+    font-weight: 500;
+    margin-top: 10px;
+}
+.about .innerDesc {
+    width: 300px;
+}
+.about .innerContact {
+    margin-right: 71px;
+    height: 100%;
+    background-color: white;
+    padding-top: 200px;
+    border-radius: 0 0 100px 0;
+}
+.about .boxTwo {
+    background-color: var(--color-primary);
+    margin-left: 71px;
+    border-radius: 100px 0 0 100px;
+}
+.about ul {
+    background-color: white;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    border-radius: 80px;
+}
+.about .point {
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.about .point .innerPoint {
+    width: 15px;
+    height: 15px;
+    background-color: var(--color-primary);
+    border-radius: 50px;
+    margin-right: 5px;
+}
+.about .tool {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+}
+.about svg {
+    width: 100px;
+    height: 100px;
+}
+.about .innerRa {
+    font-family: var(--font-display);
+    font-size: 180px;
+    rotate: 90deg;
+}
+.about .innerEx {
+    background-color: white;
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-bottom: 40px;
+    border-left: 10px solid var(--color-body);
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 20px;
+    font-weight: 900;
+}
+.about .job {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 20px;
+}
+.about .year {
+    font-size: 14px;
     margin-bottom: 50px;
+}
+.about .companyName {
+    font-size: 16px;
+    font-weight: 500;
+}
+.about .work {
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 20px;
+}
+.about .boxThree {
+    background-color: var(--color-primary);
+    padding-bottom: 20px;
+}
+.about .edu {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.about .innerEdu {
+    background-color: var(--color-primary);
+    margin-top: 50px;
+    margin-left: 100px;
+    border-left: 10px solid var(--color-body);
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 20px;
+    font-weight: 900;
+}
+.about .eduDesc {
+    width: 600px;
+    margin-top: -20px;
+    background-color: rgb(214, 214, 214);
+    margin-left: 50px;
+    padding: 30px;
+    padding-top: 50px;
+    border-radius: 50px;
+}
+.footer {
+    margin-top: -40px;
+    position: relative;
+    z-index: 999;
+}
+.about .skill {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.about .skill .nameSkill {
+    margin-right: 20px;
+    font-weight: 500;
+}
+.about .skill .circleBox {
+    display: flex;
+}
+.about .skill .circle {
+    background-color: var(--color-primary);
+    width: 35px;
+    height: 10px;
+    border-radius: 50px;
+    margin-right: 10px;
 }
